# UAVControlSystem

./: CMakeLists.txt  README.md  approvaldialog.cpp  approvaldialog.h  approvaldialog.ui  commandbuttons.cpp  commandbuttons.h  commandbuttons.ui  indicators.cpp  indicators.h  indicators.ui  main.cpp  notification.cpp  notification.h  notification.ui  placemark.cpp  placemark.h  pointmark.cpp  pointmark.h  routeline.cpp  routeline.h  routes.cpp  routes.h  routes.ui
api/: CMakeLists.txt  server.cpp  server.h
lib/: CMakeLists.txt
